src/test/ui/nll/maybe-initialized-drop-implicit-fragment-drop.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop-implicit-fragment-drop.rs:17:5
   |
LL |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
LL |     x = 1;
   |     ^^^^^ assignment to borrowed `x` occurs here
LL |     // FIXME ^ Should not error in the future with implicit dtors, only manually implemented ones
LL | }
   | - borrow might be used here, when `foo` is dropped and runs the destructor for type `Foo<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
